# easycraft

./: README.md  docker-compose.yml
ceramics/: admin.sk  ceramic  ceramic.json  composedb  composedb.env  daemon_config.json  package-lock.json  package.json
ceramics/ceramic-indexing/: ceramic.db
ceramics/hack-app/: composedb.config.json  package.json
ceramics/hack-app/composites/: capacity.graphql  capacity3.graphql  (+2 more)
evm-contracts/: .env.example  hardhat.config.js  helper-hardhat-config.js  package-lock.json  package.json
evm-contracts/constants/: supplier.js
evm-contracts/contracts/: MarketPlace.sol
evm-contracts/deploy/: 01-deploy-marketplace.js
evm-contracts/scripts/: add-supplier.js  deploy.js
evm-contracts/utils/: verify.js
services/frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile  orval.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
services/node-backend/: .dockerignore  .env.example  .gitignore  definition.js  package.json  server.js  tsconfig.json
services/node-backend2/: definition.js  package.json  server.js
services/python-backend/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
services/python-backend/app/: crud.py  exceptions.py  main.py  router.py  schemas.py  service.py  utils.py
services/python-backend/scripts/: suppliers.json
services/python-backend/static/: format_schema.json  order_schema.json
services/python-backend/tests/: conftest.py
services/python-backend/tests/e2e/: test_orders.py
services/python-backend/tests/integration/: test_main.py
(+73 files in other folders)
